# rs-design

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md  TODO.md  rust-toolchain.toml
.github/workflows/: ci.yml  package.yml  release.yml
crates/od-agents/: Cargo.toml
crates/od-agents/src/: lib.rs
crates/od-artifacts/: Cargo.toml
crates/od-artifacts/src/: lib.rs
crates/od-catalog/: Cargo.toml
crates/od-catalog/src/: design_systems.rs  frontmatter.rs  jsutil.rs  lib.rs  skills.rs  swift_colors.rs
crates/od-contract/: Cargo.toml
crates/od-contract/src/: golden.rs  lib.rs
crates/od-contract/tests/: golden.rs
crates/od-contract/tests/golden/fixtures/: design-systems.json  design-systems.meta.json  design-templates.json  design-templates.meta.json  skills.json  skills.meta.json
crates/od-prompt/: Cargo.toml
crates/od-prompt/src/: lib.rs
crates/od-proxy/: Cargo.toml
crates/od-proxy/src/: lib.rs
crates/od-server/: Cargo.toml
crates/od-server/examples/: cp3_proxy_verify.rs  cp4_seam_verify.rs  cp5_seam_verify.rs  sse_spike.rs
crates/od-server/src/: catalog.rs  lib.rs  proxy.rs  route_table.rs  security.rs
crates/od-server/tests/: proxy.rs  route_table.rs  security.rs  sse.rs
crates/od-store/: Cargo.toml
crates/od-store/src/: lib.rs
docs/: ARCHITECTURE.md  CONTRACT.md  PACKAGING.md  V2-MIGRATION.md
docs/spikes/: README.md  api-base-wiring.md  cp2-seam.md  cp3-embed.md  cp5-acceptance.md  daemon-packaging.md  native-addons.md  static-export.md  upstream-build.md  webkitgtk-render.md
docs/spikes/static-export/: probe.py
docs/spikes/webkitgtk-render/: render_probe.py
scripts/: build-daemon-bundle.sh  capture-golden.sh  ci-install-smoke.sh  cp5-acceptance.sh  e2e-smoke.sh  fetch-node-runtime.sh  mock-byok-openai.mjs  release-version.sh  verify-bundle.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/placeholder-ui/: index.html
src-tauri/src/: diagnostics.rs  env_inject.rs  launcher.rs  main.rs  supervisor.rs
