[package]
name = "rs-design"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Native Ubuntu desktop app for Open Design (Tauri + Rust)"
default-run = "rs-design"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# The webview-facing axum server (route table + SSE-safe proxy). The supervisor
# runs it on an ephemeral loopback port and points the webview at it (CP2).
od-server = { workspace = true }
# `axum::serve` drives the supervisor's listener; route table comes from od-server.
axum = { workspace = true }
